fixes #204 - removed whitespace from bottom of docs pages

--- a/docs/themes/cypress/source/css/_partial/base.scss
+++ b/docs/themes/cypress/source/css/_partial/base.scss
@@ -92,7 +92,6 @@ button, select, input, input[type="submit"]::-moz-focus-inner, input[type="butto
   border-top: 1px solid $color-background;
   border-bottom: 1px solid $color-background;
   padding-top: 40px;
-  padding-bottom: 150px;
   margin: -1px 0;
 }
 
